# html-site-generator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  theme.toml
.github/workflows/: ci.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: attributes.rs  datetime.rs  error.rs  lib.rs  raw_writer.rs  transform.rs  unique_link.rs
src/code/: mod.rs
src/html/: abbr.rs  address.rs  body.rs  div.rs  document.rs  footer.rs  head.rs  hyperlink.rs  image.rs  line_break.rs  link.rs  list.rs  meta.rs  mod.rs  paragraph.rs  text.rs  title.rs
src/strukt/: document.rs  mod.rs  paragraph.rs
src/strukt/object/: code.rs  image.rs  list.rs  mod.rs  text.rs
src/templates/: code.html  document.css  document.html  image.html  list_object.html
