[package]
name = "html-site-generator"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LetsMelon/html-site-generator"
description = "Build a html file blazingly fast in Rust"
readme = "./README.md"
keywords = ["html"]
documentation = "https://docs.rs/html-site-generator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.27" }
derive_builder = "0.12.0"
html-site-generator-macro = { version = "0.0.1", path = "./macro" }

[dev-dependencies]
html_parser = "0.7.0"

[workspace]
members = ["macro"]
