[package]
name = "html-site-generator"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LetsMelon/html-site-generator"
description = "Build a html file blazingly fast in Rust"
readme = "./README.md"
keywords = ["html"]
documentation = "https://docs.rs/html-site-generator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
html-site-generator-macro = { version = "0.0.1", path = "./macro" }
thiserror = "1.0.49"

[dev-dependencies]
html_parser = "0.7.0"
proptest = "1.3.1"

[workspace]
members = ["macro"]
